--- a/VRChat/18/1265918.html
+++ b/VRChat/18/1265918.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "nfoliKByF54C4FFHxKNo+I/PQypH+q/M48i9l/nQ1I4="></script>
+    "+mxrXYkDlN/H+Px9pWiq4TGoz9wvZzif4Mi1gJaJvVk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dアクセサリー『うじゅキーホルダー』","description":"3Dアクセサリー『うじゅキーホルダー』\n\nUnityパッケージ化されたデータが入ってます。\nDynamic Boneでゆらゆら揺れるよ！\n\nドット絵製作：Suica\nモデリング：UNMM\nセットアップ：うつつ\n\n\n[導入方法]\n\n1. DynamicBone、Arktoon-Shadersを予めインポートしておいてください。※任意\n\n2. uju_key.unitypackageをインポートしてください。\n\n3. Assetsからutsu_key.plefabをHierarchy上にドラッグ＆ドロップしてお好みの場所に配置してください。","url":"https://booth.pm/ja/items/1265918","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/72453db8-560c-4406-822c-77d172acd49c/i/1265918/b597d133-078e-49ea-a0a0-910dd8fd2079_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nfoliKByF54C4FFHxKNo+I/PQypH+q/M48i9l/nQ1I4="></script>
+    nonce="+mxrXYkDlN/H+Px9pWiq4TGoz9wvZzif4Mi1gJaJvVk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1265918/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               101
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1265918/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               101
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
