--- a/VRChat/74/1264774.html
+++ b/VRChat/74/1264774.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GP6WNBf/7O9DEyK+P+k+wjJVRDRKkoL1+vMvZaiLvqk="></script>
+    "DXeZmWaO9j0QDMNvqRSBTzS8L2vOysz+BuwvSQqldDA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３Ｄモデル２体セット】灯夜＆灯花","description":"【重要】\nUnity2018へのアップデートに伴い、本商品の更新、サポートを終了いたします。\n\n現状、特に問題なくUnity2018およびVRChatで動作することを確認しておりますが、今後のVrchatのアップデートやIKの変更に伴い不具合が発生する可能性もございます。\n\n購入の前に、下記試着ワールドでの確認をよろしくおねがいします。\n\n【試着について】\nアバターの試着が可能です。ワールドをUPしていますので、試着を希望される方は『soroket』でワールド検索してください！\n\n【説明】\nVRChatでの利用を想定した３Dモデルの２体セットになります。\n本作品をダウンロードいただくことで、灯夜・灯花の２人がご利用いただけるようになります。\n\n利用規約を本ページにも記載しますので、ご確認の上ご購入願います。\n\n本作品はVRCHATのアバターパフォーマンスシステムに対応しており、GOOD判定になるよう調整しております。\n\n改変用に、メッシュ結合を行っていないモデルも同梱しておりますので、用途に合わせてご利用ください。\n\nまた、それぞれにUnityパッケージも作成しておりますので、モデリングの知識がない方でも本作品をご利用いただけます。\n\nUnityパッケージには、まんまるシェーダー１．３を同梱しております。\n他シェーダを利用する場合は、裏面表示が可能なシェーダーをご利用ください。\n\n外套等は、クロスを使わずウェイトにて設定しているため、腕の動かし方等によっては貫通する場合があります。\n可能な限り、VRChat上での試着の後お買い求めください。\n　※今後も可能な限り調整は続けていく予定です\n\nまた、VRChatのIKの都合上、灯花のアバターをVRモードで利用した際、肩付近が破綻するケースを確認しています。（デスクトップ、フルトラは問題なし）現在対応策を模索しておりますので、解決次第、データの差し替えを実施いたします。\n\n\n\n【内容物】\n　FBX…2種　\n　テクスチャ…2種（+AOのみ、AOなし、着色なしを同梱）\n　Unityパッケージ…2種\n\n\n【3/8追記】\n本アバターおよび、本アバターの改変を利用したVtuber活動を許可いたします。\nただし、元のキャラクターがわからないレベルでの改変の場合は、本キャラクターの改変であることを動画内で告知してください。\n\nあわせて、収益化放送等の映り込みやゲスト出演も同様に許可いたします。\nレギュラー出演する場合かつ、元のキャラクターがわからないレベルの改変である場合は、動画内で結構ですので告知して下さい。","url":"https://booth.pm/ja/items/1264774","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"600","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/741e453a-753d-417e-a2fe-ca0a1086dba3/i/1264774/e8b3c6e0-3036-4199-bbc8-527686483e3b_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GP6WNBf/7O9DEyK+P+k+wjJVRDRKkoL1+vMvZaiLvqk="></script>
+    nonce="DXeZmWaO9j0QDMNvqRSBTzS8L2vOysz+BuwvSQqldDA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264774/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264774/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
