--- a/VRChat/42/1264642.html
+++ b/VRChat/42/1264642.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cZqp0VtgsvS2y5Wiw4dJ5AVRkOLN8XMxDrlSXFPeQ90="></script>
+    "Qz88bYWjqq8KME5WI59WeuJDD7l3PjbtYInaoHJLBXQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dアバター『メイリー』","description":"■3Ｄアバター　アステリ魔法学園『メイリー』　v1.0.0\n\nVRChatでの使用を想定し作成したオリジナルアバターです。\n両手の代わりにぬいぐるみを操り、しゃべるのもぬいぐるみという子です。\nカラーバリエーションをあらかじめ４パターンご用意いたしました。\n\nポリゴン数：△23,316\nマテリアル数：1\nテクスチャ数：5枚\n\nシェープキーおよび、リップシンク対応\n\n※フルボディトラッキング及びデスクトップモードに関しては現在調整中となります。\n対応完了し次第、こちらにアップロードする予定となっております。\n\n※ぬいぐるみを操る動きとなっているため、以下の現象が起こる点、あらかじめご了承ください。\n・手元やメニューが隠れやすい\n・視線にぬいぐるみのパーツがかぶりやすい\n\n同梱内容\n・Readme\n・Unitypackage\n・モデルFBXデータ\n・各種テクスチャPNGデータ\n\nマテリアルは『ユニティちゃんトゥーンシェーダーVer.2.0』を使用しています。\n\nユニティちゃんトゥーンシェーダーを利用される場合は下記のライセンスに従うようにお願いします。\n【http://unity-chan.com/contents/guideline/】\n© Unity Technologies Japan/UCL\n\n利用について\n・VRChatへのアップロード可\n・編集、加工、改変可\n・商用利用可\n・クレジット表記不要\n\n禁止事項\n・素材そのままの配布、販売\n・加工したモデルデータの配布、販売\n\n更新履歴\n●ｖ1.0.0_2019/03/08\n・販売開始\n\nこのデータを使用したことによって生じた問題に関しましては、責任を負いかねます。\n自己責任でのご使用をお願い致します。\n\nその他、お気づきの点御座いましたら\n下記の連絡先までお問い合わせください。\n--------------------------------------------------------------------------\n\n■制作者\nぬるもと\n\n■BOOTHページ\nhttps://nullmoto.booth.pm/\n\n■Twitter\nhttps://twitter.com/Null_moto_","url":"https://booth.pm/ja/items/1264642","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/6b6e769f-e106-4116-9c79-b5a7cd46240d/i/1264642/ce0bdff1-ab6e-4bba-a80f-530a74231598_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cZqp0VtgsvS2y5Wiw4dJ5AVRkOLN8XMxDrlSXFPeQ90="></script>
+    nonce="Qz88bYWjqq8KME5WI59WeuJDD7l3PjbtYInaoHJLBXQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264642/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264642/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
