--- a/VRChat/19/1264519.html
+++ b/VRChat/19/1264519.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vqTnwqPMPo20PGZAb3t4lO9VQrgL+hnIR5siBZMMEb8="></script>
+    "EwXUvq5bGk29ztYT6D2cr83Ys3sBW6URWznf9fXSfTU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KTNヘルメット","description":"内容\nサイバーパンク感あふれる狐ヘルメットです。\nローポリモデルで作成しているので、ゲームやVRChatで、使用してください。\n\n＝＝＝＝＝＝＝構成＝＝＝＝＝＝＝＝＝\nKTN.zip\n|-KTN_MET\t\t[FBXファイル][Tris:664][Faces:340][Verts:370]\n|-cyberpunk\t\t[フォルダ]\n|    |-cyberpunk \t[Unity Package file][Unity 2017.4.15f1より出力]\n|    |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n|-army\t\t\t[フォルダ]\n|    |-army\t \t[Unity Package file][Unity 2017.4.15f1より出力]\n|    |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n|-sf\t\t\t[フォルダ]\n     |-sf\t \t[Unity Package file][Unity 2017.4.15f1より出力]\n     |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n\n\n\n\n＝＝＝＝＝＝＝＝作者＝＝＝＝＝＝＝\n名前　のしし\n\n[バーチャルマーケット2]\n参加：FutureTerminalA　\n紙綴機　代表　のびるホチキス\nhttps://nobiruhochikisu.booth.pm\n\n[Twitter]\nhttps://twitter.com/noshishi4\n\n[VRChat]\nNOSHISHI\n\n＝＝＝＝＝＝＝利用規約＝＝＝＝＝＝＝＝\n本データを購入した時点で以下の利用規約をに同意したとみなします。\n[禁止及び要相談]\n・本データおよび改変データを購入者以外が使用可能な状態にすることを許可しない。\n・上記より、本データおよび改変データの無許可配布、販売は許可しない。\n\n[許可]\n・本データおよび改変データをデータ再利用できない形で、アプリケーションおよびゲームなどに使用することを有償、無償にかかわらず許可する。\n\n・本データおよび改変データを使用した動画撮影および放送は有償、無償にかかわらず許可する。\n\n・R-18、R-18Gへの利用を許可する。\n\n・データおよび改変データに対して、クレジット表記を省略、省くことを許可する。\n\n[免責]\n・本データを含むあらゆるデータを利用することで、利用者が受ける損害および被害に関し、作者はいかなる保証も致しません。\n・本データを含むあらゆるデータを利用することで、利用者が他者に損害および被害を与えた場合は、その責任及び損害は当該利用者にあるものとし、作者は一切責任を負いません。","url":"https://booth.pm/ja/items/1264519","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/5990ded3-4033-4ce9-b375-f814c7720746/i/1264519/69710c93-87dc-46ee-9b08-c4ecd7ce7bb2_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vqTnwqPMPo20PGZAb3t4lO9VQrgL+hnIR5siBZMMEb8="></script>
+    nonce="EwXUvq5bGk29ztYT6D2cr83Ys3sBW6URWznf9fXSfTU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -168,7 +168,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -183,14 +183,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
