--- a/VRChat/77/1264477.html
+++ b/VRChat/77/1264477.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mgzVP4Lii+koUsmoRger3/trgKmfzsCCr20yxzydjPM="></script>
+    "x8mrOb3/Q45k/anlWORVknfVOFyvVE8Nsk+EaGD2tUk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フィドル/ヴァイオリン 楽器3Dモデル","description":"フィドルまたはヴァイオリンとも呼ばれている楽器の3Dモデルです。\n\"フィドル\"は構造や楽器自体ヴァイオリンと全く変わりませんが、\n主に民族音楽(アイリッシュ、カントリー)などで登場する際の別名称として使われています。\nこの3D楽器モデル：フィドルではそんな民族音楽とマッチする、自然と一体化したようなイメージの外観を目指しました。\nぜひVRChat等でのワールドの装飾や、アバターのアクセサリとして使用してみてください。","url":"https://booth.pm/ja/items/1264477","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/423d2f20-5ba9-4da6-83e5-28de2771fb6a/i/1264477/fcd12dff-8b0d-4d6a-90ef-ee6d118a1796_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mgzVP4Lii+koUsmoRger3/trgKmfzsCCr20yxzydjPM="></script>
+    nonce="x8mrOb3/Q45k/anlWORVknfVOFyvVE8Nsk+EaGD2tUk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264477/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264477/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
